--- a/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
@@ -300,6 +300,10 @@
     <string name="st_sub_title_customize_mode_name">Nume</string>
     <string name="st_sub_title_whiteblack_list_group">Listă blocări</string>
     <string name="st_sum_call_wait">Mesajul dvs. de plecat va fi, de asemenea, redat ca un semnal de ocupat pentru apelurile primite.</string>
+    <string name="st_summary_blacklist_numbers">Blocați apelurile și mesajele utilizând numere de telefon și prefixe</string>
+    <string name="st_summary_keywords_blacklist">Adăugați cuvinte cheie pentru a bloca unele mesaje</string>
+    <string name="st_summary_special_numbers">Blocați numerele de telefon marcate</string>
+    <string name="st_summary_whitelist_numbers">Permiteți primirea apelurilor și mesajelor de la anumite numere de telefon și prefixe</string>
     <string name="st_title_adblock_group">Blocare reclame</string>
     <string name="st_title_adblock_setting">Setări blocare reclame</string>
     <string name="st_title_addblacklist">Adăugaţi în lista blocărilor</string>
