--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -7,6 +7,10 @@
     <string name="activate_finddevice">Conectați-vă la rețea pentru a activa dispozitivul</string>
     <string name="activate_number_change_dialog_message">Selectați numărul de telefon care va fi vizibil pentru alte dispozitive atunci când utilizați VoIP</string>
     <string name="activating">Activare…</string>
+    <string name="add_cloud_storage">Adăugați spațiu de stocare</string>
+    <string name="add_short_cut">Adăugați</string>
+    <string name="added_successfully">Adăugat cu succes</string>
+    <string name="all_sync_item_open">Toate elementele sunt active</string>
     <string name="antispam_sync">Setări Nu deranjaţi</string>
     <string name="app_name">Mi Cloud</string>
     <string name="apple_10gb">20 GB</string>
@@ -46,6 +50,8 @@ Ultima copie de rezervă a fost creată la %2$s"</string>
     <string name="cloud_space_upgrade_message">Apăsați pentru a adăuga %s GB în contul dvs. de Cloud</string>
     <string name="cloud_space_upgrade_no_quota_info">Nu s-au putut obține informații despre stocare</string>
     <string name="cloud_space_upgrade_title">Mai mult spațiu pentru Mi Cloud</string>
+    <string name="cloud_storage_full">Stocare în Cloud</string>
+    <string name="cloud_storage_is_full">Plin</string>
     <string name="cloudservice_new_sync">Sincronizaţi %s cu Mi Cloud</string>
     <string name="cmcc_micloud_dspt">Utilizaţi Mi Cloud pentru a sincroniza datele, pentru a localiza dispozitivul dvs. și pentru a partaja lucruri prietenilor</string>
     <string name="connect_network">Conectați-vă la Wi-Fi sau introduceți o cartelă SIM</string>
@@ -55,6 +61,7 @@ Ultima copie de rezervă a fost creată la %2$s"</string>
     <string name="detect_sim_card">Caută cartela SIM</string>
     <string name="disable_find_device_error">Nu se poate opri localizarea dispozitivului. %1$s</string>
     <string name="disable_find_device_success">Localizarea telefonului este oprită.</string>
+    <string name="due_date_format">dd/MM/yyyy</string>
     <string name="enableAll">Sincronizaţi tot</string>
     <string name="enable_cloud_service_notification">Trebuie să activați Mi Cloud</string>
     <string name="enable_find_device_error">Nu se poate opri localizarea dispozitivului. %1$s</string>
@@ -94,6 +101,9 @@ Dacă veţi schimba cartela SIM, un alt SMS va fi trimis automat pentru a reacti
     <string name="find_device_reading_status">Actualizare stare…</string>
     <string name="find_device_reading_status_failure">"Nu s-a putut actualiza starea."</string>
     <string name="find_device_send_sms_alert">Dacă veţi schimba cartela SIM, un alt mesaj SMS va fi trimis automat pentru a reactiva această funcție.</string>
+    <string name="find_device_service_summary">"Localizați și blocați de la distanță telefonul în cazul în care îl pierdeți."</string>
+    <string name="find_device_service_summary_international">"Localizați și blocați de la distanță telefonul în cazul în care îl pierdeți."</string>
+    <string name="find_device_service_title">Localizare telefon</string>
     <string name="find_device_status_ok">Găsiți dispozitivul de oriunde accesând i.mi.com</string>
     <string name="find_device_status_ok_international">Localizați dispozitivul dvs. accesând www.mi.com/micloud</string>
     <string name="find_device_success_title">Localizare dispozitiv</string>
@@ -117,9 +127,10 @@ Dacă veţi schimba cartela SIM, un alt SMS va fi trimis automat pentru a reacti
     <string name="loading">Doar o secundă…</string>
     <string name="loading_hint">Încărcare</string>
     <string name="master_alert_notif_content">"Nu s-a putut efectua sincronizarea"</string>
-    <string name="master_alert_notif_dspt_add">%s elemente așteaptã sincronizarea</string>
+    <string name="master_alert_notif_dspt_add">Elemente care așteaptã sincronizarea: %s</string>
     <string name="master_alert_notif_dspt_no">Sincronizat</string>
     <string name="master_alert_notif_title">Activați sincronizarea cu Mi Cloud</string>
+    <string name="member_due_date">Valabil până la %s</string>
     <string name="micloud_all_sub_1_intl_sms">Un SMS internațional va fi trimis pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru acest SMS.</string>
     <string name="micloud_all_sub_1_sms">Un SMS local va fi trimis pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru acest SMS..</string>
     <string name="micloud_all_sub_1_sms_1_intl_sms">Două SMS-uri(unul local și unul internațional) vor fi trimise pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru aceste SMS-uri.</string>
@@ -128,7 +139,7 @@ Dacă veţi schimba cartela SIM, un alt SMS va fi trimis automat pentru a reacti
     <string name="micloud_all_sub_resend_sms">"Când activați localizarea telefonului, un SMS va fi trimis atunci când schimbați cartela SIM."</string>
     <string name="micloud_battery_low_notification_message">Conectați încărcătorul pentru a putea sincroniza</string>
     <string name="micloud_battery_low_notification_title">Nivel scăzut al acumulatorului</string>
-    <string name="micloud_buy_member">Cont</string>
+    <string name="micloud_buy_member">Cumpărați titlu de membru Mi Cloud</string>
     <string name="micloud_check_sim_notify_text">"Se pare că aţi schimbat cardurile SIM. Conectaţi-vă
 la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_check_sim_notify_title">Reactivare Mi Cloud</string>
@@ -175,7 +186,7 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_detail_lastest">Sincronizat</string>
     <string name="micloud_detail_lastest_with_off">Sincronizat</string>
     <string name="micloud_detail_not_sync">%d așteaptă sincronizarea</string>
-    <string name="micloud_detail_not_synced">Nesincronizat</string>
+    <string name="micloud_detail_not_synced">nesincronizat</string>
     <string name="micloud_detail_ok">OK</string>
     <string name="micloud_detail_pending">Aşteptare</string>
     <string name="micloud_detail_preference_sync_items">Elemente</string>
@@ -187,7 +198,7 @@ la contul dvs. Mi pentru a reactiva Mi Cloud."</string>
     <string name="micloud_detail_syncing">Sincronizare</string>
     <string name="micloud_detail_upload_syncing">Încărcare %s</string>
     <string name="micloud_detail_wlan">%d așteaptă sincronizarea</string>
-    <string name="micloud_detail_wlan_contact">%d fotografii de contact așteaptă sincronizarea</string>
+    <string name="micloud_detail_wlan_contact">Fotografii de contact care așteaptă sincronizarea: %d</string>
     <string name="micloud_detail_wlan_mms">%d mesaje MMS așteaptă sincronizarea</string>
     <string name="micloud_dspt">" Utilizaţi Mi Cloud pentru a sincroniza datele, pentru a localiza dispozitivul"</string>
     <string name="micloud_dspt_provision">Utilizaţi Mi Cloud pentru a sincroniza datele, localiza dispozitivul și pentru a partaja lucruri prietenilor.</string>
@@ -242,22 +253,21 @@ Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie pu
     <string name="micloud_main_multi_user_error_title">Eroare MiCloud</string>
     <string name="micloud_main_network_abnormal">Nu se poate conecta la rețea</string>
     <string name="micloud_main_network_error">Nu se poate conecta la rețea</string>
-    <string name="micloud_main_not_sync">%d elemente așteaptă sincronizarea</string>
+    <string name="micloud_main_not_sync">Elemente care așteaptă sincronizarea: %d</string>
     <string name="micloud_main_query_error_message">"Nu se poate verifica dacă sincronizarea tuturor serviciilor s-a finalizat"</string>
     <string name="micloud_main_query_error_title">"Nu s-au putut obține informații despre starea sincronizării"</string>
     <string name="micloud_main_set_internet">Reţea</string>
     <string name="micloud_main_space_full">Spațiu de stocare insuficient.</string>
-    <string name="micloud_main_space_full_title">Spaţiul de stocare este epuizat</string>
+    <string name="micloud_main_space_full_title">Spaţiul de stocare este insuficient; sincronizarea s-a oprit</string>
     <string name="micloud_main_space_low">Spaţiu aproape epuizat</string>
     <string name="micloud_main_stop_sync">Sincronizare oprită</string>
     <string name="micloud_main_suggest_master_sync">"Nu s-au putut sincroniza toate elementele"</string>
-    <string name="micloud_main_suggest_setting">"Așteptare conexiune Wi-Fi pentru sincronizare
-Apăsați butonul Setări pentru a vizualiza mai multe opțiuni"</string>
+    <string name="micloud_main_suggest_setting">Modificați setările sau conectați-vă la Wi-Fi</string>
     <string name="micloud_main_suggest_sync">Nu s-a sincronizat tot conţinutul</string>
     <string name="micloud_main_sync_exception">Eroare de sincronizare</string>
     <string name="micloud_main_sync_init">Obţinere informaţii</string>
     <string name="micloud_main_sync_now">Sincronizaţi acum</string>
-    <string name="micloud_main_sync_on">Sincronizare pornită</string>
+    <string name="micloud_main_sync_on">Activați sincronizarea</string>
     <string name="micloud_main_sync_on_wifi">Utilizaţi Wi-Fi</string>
     <string name="micloud_main_sync_pause">Sincronizare întreruptă</string>
     <string name="micloud_main_sync_pending">Se așteaptã sincronizarea</string>
@@ -271,7 +281,7 @@ Apăsați butonul Setări pentru a vizualiza mai multe opțiuni"</string>
     <string name="micloud_main_title_sync_off">Sincronizare dezactivată</string>
     <string name="micloud_main_title_sync_on_wifi">Utilizaţi Wi-Fi</string>
     <string name="micloud_main_update_space">Obțineți mai mult spațiu de stocare</string>
-    <string name="micloud_main_wlan_sync_data_count">"%d elemente aşteaptă sincronizarea"</string>
+    <string name="micloud_main_wlan_sync_data_count">Elemente care aşteaptă sincronizarea: %d</string>
     <string name="micloud_member">Apartenență Mi Cloud</string>
     <string name="micloud_member_advantage">Obțineţi mai mult spațiu de stocare.</string>
     <string name="micloud_member_buy_content" formatted="false">"Valid pentru %s-%s-%s
@@ -340,6 +350,7 @@ Apăsați butonul Setări pentru a vizualiza mai multe opțiuni"</string>
     <string name="micloud_sync_alert_dialog_negative">Anulaţi</string>
     <string name="micloud_sync_alert_dialog_positive">OK</string>
     <string name="micloud_sync_alert_dialog_title">Utilizare Mi Cloud</string>
+    <string name="micloud_sync_off">Sincronizarea cu Mi Cloud este oprită</string>
     <string name="micloud_title_dspt" formatted="false">"Total %s
  utilizat %s | rămas %s"</string>
     <string name="micloud_title_dspt_remain">Rămas: %s</string>
@@ -358,7 +369,7 @@ Apăsați butonul Setări pentru a vizualiza mai multe opțiuni"</string>
     <string name="micloud_web_discription_01">Conectaţi-vă la i.mi.com</string>
     <string name="micloud_web_discription_02">pentru a stoca și accesa fișierele de oriunde</string>
     <string name="micloud_web_discription_international">Vizitaţi www.mi.com/micloud</string>
-    <string name="micloud_website">Vizualizați elementele în Mi Cloud</string>
+    <string name="micloud_website">Elemente în Mi Cloud</string>
     <string name="microsoft_cloud">Servicii Microsoft Cloud</string>
     <string name="microsoft_cloud_eng">One Drive</string>
     <string name="microsoft_cloud_price">Aproximativ 11 euro pe an</string>
@@ -381,10 +392,18 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="mx_sub_dspt_provision">Mi Message</string>
     <string name="mx_sub_dspt_provision_with_voip">Apelare prin internet</string>
     <string name="mx_voip_dspt">>Mi Voice</string>
+    <string name="network_unconnected">Nu sunteți conectat la rețea</string>
     <string name="next">Înainte</string>
     <string name="noRemind">Nu-mi reaminti</string>
     <string name="no_sim">Niciun card SIM detectat</string>
+    <string name="one_sync_item_close">%d este oprită</string>
+    <string name="open_micloud_sync">Porniți sincronizarea cu Mi Cloud</string>
     <string name="other_settings">Alte setări</string>
+    <string name="other_sync_item">Alte elemente sincronizate</string>
+    <string name="passed_synced_time_day">Sincronizat cu %dd zile în urmă</string>
+    <string name="passed_synced_time_hour">Sincronizat cu %1$dh și %2$dm în urmă</string>
+    <string name="passed_synced_time_min">Sincronizat cu %d min în urmă</string>
+    <string name="passed_synced_time_sec">Sincronizat cu %d sec în urmă</string>
     <string name="password">Introduceţi parola dvs.</string>
     <string name="phone_number_may_required_dspt_provision">"Acest serviciu poate solicita numărul dvs. de telefon. "</string>
     <string name="phone_number_required_dspt_provision">"Acest serviciu solicită numărul dvs. de telefon. "</string>
@@ -393,8 +412,7 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="pref_title_sync_contacts_title">Sincronizare contacte</string>
     <string name="pref_title_sync_display_photo_on_wifi_only">Se utilizează doar Wi-Fi pentru sincronizarea fotografiilor</string>
     <string name="privacy_policy">Politica de confidențialitate</string>
-    <string name="provision_arrow_back">&lt;</string>
-    <string name="provision_arrow_next">&gt;</string>
+    <string name="recommend_open_all_sync">Sincronizați toate elementele</string>
     <string name="remind_later">Nu acum</string>
     <string name="restoreSync">Sincronizaţi acum</string>
     <string name="search_cloudbackup_pref">Copie Cloud</string>
@@ -413,6 +431,7 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="share_success">Partajat</string>
     <string name="share_weibo_not_installed">Weibo nu este instalat.</string>
     <string name="share_weixin_not_installed">Wechat nu este instalat.</string>
+    <string name="short_cut_desc">Adăugați pictograma Mi Cloud pe ecranul principal?</string>
     <string name="sina_share_fail">Trimitere eşuată</string>
     <string name="sina_share_fail_content_repeat">Imposibil de partajat conținutul existent…</string>
     <string name="sina_share_pendding">Trimitere…</string>
@@ -420,13 +439,14 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="sina_token_expired_warning">Cont Weibo expirat: reconectaţi-vă</string>
     <string name="sina_token_invalid_warning">Cont Weibo nevalid: reconectaţi-vă</string>
     <string name="sms">Mesaje</string>
+    <string name="some_sync_item_close">%d sunt oprite</string>
     <string name="soundrecorder_sync_only_in_wifi">Utilizați doar Wi-Fi pentru sincronizare</string>
     <string name="soundrecorder_sync_only_in_wifi_summary">Aplicația Înregistrare nu va utiliza datele mobile pentru a descărca sau încărca înregistrări</string>
     <string name="soundrecorder_sync_records">Sincronizare cu Mi Cloud</string>
     <string name="start_micloud">Porniţi</string>
     <string name="storage">Stocare</string>
     <string name="sub_alert_notif_content">Porniți sincronizarea cu Mi Cloud pentru a putea face o copie de siguranță pentru datele dumneavoastră</string>
-    <string name="sub_alert_notif_dspt_add">%s elemente aşteaptă sincronizarea</string>
+    <string name="sub_alert_notif_dspt_add">Elemente care aşteaptă sincronizarea: %s</string>
     <string name="sub_alert_notif_dspt_no">Sincronizat</string>
     <string name="sub_alert_notif_title">Sincronizați cu Mi Cloud</string>
     <string name="sub_sync_item_sms_summary">Sincronizați mesajele care conțin fotografii, fişierele audio sau alte fişiere multimedia doar atunci când sunteți conectat la o rețea Wi-Fi</string>
@@ -451,6 +471,7 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="sync_item_calllog_title">Sincronizare jurnal apeluri</string>
     <string name="sync_item_sms_summary">Sincronizaţi mesajele expediate şi recepţionate de pe aceste telefon</string>
     <string name="sync_item_sms_title">Sincronizare mesaje</string>
+    <string name="sync_item_title">Elemente sincronizate</string>
     <string name="sync_off">Dezactivat</string>
     <string name="sync_on">Activat</string>
     <string name="sync_resend_sms_dspt_provision">" Dacă schimbaţi cartela SIM, operatorul dvs. vă poate taxa pentru un mesaj SMS utilizat pentru a reactiva acest serviciu."</string>
@@ -482,6 +503,7 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="vcode">Cod de verificare</string>
     <string name="verify">Verificare</string>
     <string name="view_storage_title">Spaţiul de stocare</string>
+    <string name="virtual_sim_desc">Activați Mi SIM pentru a vă localiza telefonul fără a utiliza o cartelă SIM</string>
     <string name="voip_choose_sim">Selectaţi numărul de telefon pentru a activa Mi Voice</string>
     <string name="wipe_data_dialog_msg_separator">, </string>
     <string name="xiaomi_account_type">com.xiaomi</string>
