--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -546,7 +546,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="secret_album_set_pc_password_dialog_msg">Parola de protecție a confidențialității este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
     <string name="secret_album_set_pc_password_dialog_ok">Setați parola</string>
     <string name="secret_album_set_pc_password_dialog_title">Setați o nouă parolă</string>
-    <string name="secret_album_set_pc_password_first_use_msg">Se va folosi parola de protecție a confidențialității. Aceasta este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_set_pc_password_first_use_msg">Se va folosi parola de protecție a confidențialității. Aceasta este valabilă pentru fotografii, notițe, dosare ascunse, etc.</string>
     <string name="secret_album_set_pc_password_first_use_title">Parola de protecție a confidențialității</string>
     <string name="secret_reason_space_full">Albumul Cloud este plin</string>
     <string name="secret_reason_too_large">Fișierul este prea mare</string>
