--- a/Romanian/main/MiuiKeyguard.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiKeyguard.apk/res/values-ro/strings.xml
@@ -3,6 +3,7 @@
     <string name="accessibility_enter_lock_wallpaper">Atingeți pentru a deschide Caruselul de imagini de fundal</string>
     <string name="click_to_enter_text">Apăsaţi pentru a vizualiza</string>
     <string name="confirm_pin_msg">Reintroduceţi codul PIN</string>
+    <string name="custom_lock_wallpaper_enter">Intrați</string>
     <string name="default_lockscreen_unlock_hint_text">Glisaţi în sus pentru a debloca</string>
     <string name="delete">Ştergeţi</string>
     <string name="emergency_call_string">Apel de urgenţă</string>
