--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -20,7 +20,7 @@
     <string name="input_method_category">Selectați tastatura prestabilită pe care o veți utiliza pentru scriere e-mailuri, note, etc. Rețineți că puteți instala alte tastaturi mai târziu.</string>
     <string name="input_method_setting">Selectați tastatura prestabilită</string>
     <string name="install_preinstall_app">Încărcare aplicaţii…</string>
-    <string name="locale_picker_title">Selectaţi localizarea</string>
+    <string name="locale_picker_title">Selectaţi regiunea</string>
     <string name="miui_privacy_policy_no_network">Nu aveți o conexiune la internet. Vizualizaţi Politica de confidențialitate la %s.</string>
     <string name="miui_terms_no_network">Nu aveți conexiune la internet. Vizualizaţi Termenii și condițiile la %s.</string>
     <string name="multisim_settings_category">Setări cartelă SIM</string>
@@ -33,19 +33,18 @@
     <string name="other_settings_location">Locaţie</string>
     <string name="other_settings_location_summary">Permiteți aplicațiilor să acceseze locația dvs.</string>
     <string name="other_settings_mifg_online_content">Carusel de imagini de fundal</string>
-    <string name="other_settings_mifg_online_content_summary">Conectați-vă la internet pentru a obține imagini de fundal noi în mod regulat.</string>
-    <string name="other_settings_upload_debug_log_summary">Datele de diagnosticare pot include informații despre modul dumneavoastră de utilizare a dispozitivului, a sistemului de operare și a aplicațiilor. Datele vor fi utilizate pentru localizarea și analizarea problemelor de sistem și nu vor fi folosite pentru a vă identifica.</string>
+    <string name="other_settings_mifg_online_content_summary">Obțineți imagini de fundal noi în mod regulat.</string>
+    <string name="other_settings_upload_debug_log_summary">Informațiile colectate vor fi utilizate pentru localizarea și analizarea problemelor de sistem și pot conține date personale. Aceste date nu vor fi folosite pentru a vă identifica.</string>
     <string name="other_settings_upload_debug_log_title">Trimiteți date de diagnosticare în mod automat</string>
     <string name="other_settings_user_experience">Programul Experiență Utilizator</string>
-    <string name="other_settings_user_experience_summary">Ajutați la îmbunătățirea MIUI prin trimiterea datelor de utilizare anonime (%s)</string>
-    <string name="other_settings_user_experience_summary1">Vizualizaţi Politica de confidențialitate</string>
+    <string name="other_settings_user_experience_summary">Ajutați la îmbunătățirea produselor și a serviciilor pe care vi le oferim prin trimiterea datelor de utilizare anonime.</string>
     <string name="pref_title_data_slot">Cartela SIM preferată pentru date</string>
     <string name="pref_title_voice_slot">Cartela SIM preferată pentru voce</string>
     <string name="privacy_policy">Politica de confidențialitate</string>
     <string name="provision_inputmethod_policy_description">
 Vizualizaţi Politica de confidențialitate a tastaturii selectate</string>
     <string name="provision_inputmethod_policy_description1">Politica de confidențialitate</string>
-    <string name="setting_locale">Setare localizare…</string>
+    <string name="setting_locale">Setare regiune…</string>
     <string name="shut_down">Închidere</string>
     <string name="sim_card_detecting">Verificare cartelă SIM…</string>
     <string name="sim_card_detecting_title">Verificaţi cartela SIM</string>
