--- a/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
@@ -39,11 +39,15 @@
     <string name="error_sdcard_unmounted">Introduceţi cardul SD</string>
     <string name="export_to_note">Exportați în Note</string>
     <string name="invalid_argument">Argument invalid</string>
-    <string name="low_battery_error">Acumulatorul telefonului are mai puțin de 5% disponibil. Opriți înregistrarea și salvați-o înainte de a fi pierdută.</string>
+    <string name="low_battery_error">"Acumulatorul telefonului are mai puțin de 5% disponibil. Opriți înregistrarea și salvați-o înainte de a fi pierdută."</string>
     <string name="low_battery_error_confirm">OK</string>
     <string name="low_battery_error_title">Acumulator descărcat</string>
     <string name="mark_point_list_title">Marcaje</string>
     <string name="message_file_size_error">Înregistrarea a atins lungimea maximă susţinută de %s</string>
+    <string name="network_tip_dialog_cancel">Renunțați</string>
+    <string name="network_tip_dialog_content">Motorul de recunoaștere vocală trebuie să se conecteze la internet pentru a funcționa în mod normal.</string>
+    <string name="network_tip_dialog_ok">Permiteți</string>
+    <string name="network_tip_dialog_title">Este necesară conexiunea la internet</string>
     <string name="new_record_name">Înregistrare nouă</string>
     <string name="no_file">Nicio înregistrare</string>
     <string name="notification_message_all_paused">Poate crește utilizarea datelor mobile</string>
