--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -93,8 +93,8 @@
     <string name="data_wipe_from_device">Ștergeți de pe dispozitiv</string>
     <string name="delete_action">Ştergeţi</string>
     <string name="delete_app">Ștergeți aplicația</string>
-    <string name="delete_bank_card_message">Pentru a vă proteja, vom șterge datele cardului bancar după deconectare</string>
-    <string name="delete_bank_card_title">Șterge datele cardului bancar</string>
+    <string name="delete_bank_card_message">Din motive de securitate, vom șterge datele cardului bancar după ce vă veți deconecta</string>
+    <string name="delete_bank_card_title">Ștergerea datelor cardului bancar</string>
     <string name="delete_browser">Eliminați browser-ul</string>
     <string name="delete_device">Eliminați dispozitivul</string>
     <string name="delete_device_btn">Eliminaţi</string>
@@ -121,7 +121,6 @@
     <string name="find_device_account_error">"Nu s-a putut obține starea datorită unei erori de cont"</string>
     <string name="find_device_activate_account">Activați contul</string>
     <string name="find_device_bad_response_error">"Nu s-a putut obține starea datorită unei erori de server; încercați din nou mai târziu"</string>
-    <string name="find_device_display_id">Codul de deblocare: %s</string>
     <string name="find_device_error_password_not_confirmed">"Nu s-a putut dezactiva Localizarea dispozitivului. Introduceți parola contului Mi din nou."</string>
     <string name="find_device_error_password_recently_changed">"Ați modificat parola în ultimele 3 zile. Nu se poate dezactiva acum Localizarea dispozitivului din motive de siguranță."</string>
     <string name="find_device_interrupted">Acțiunea a fost întreruptă; încercați din nou mai târziu</string>
@@ -146,7 +145,7 @@
     <string name="location_service_not_working">Serviciul de localizare nu funcționează</string>
     <string name="login_check_find_device">Se obțin informațiile despre securitatea dispozitivului…</string>
     <string name="login_check_find_device_failed_title">"Nu s-a putut verifica starea serviciului Localizare dispozitiv"</string>
-    <string name="login_find_device_bind">Acest telefon este asociat unui cont Mi existent (%s).</string>
+    <string name="login_find_device_bind">Acest telefon este asociat unui cont Mi existent (%s); introduceți parola contului pentru a verifica telefonul.</string>
     <string name="login_guard_prompt">Solicitare verificare număr de telefon la prima conectare la contul Mi de pe un dispozitiv necunoscut sau dintr-o aplicație necunoscută.</string>
     <string name="logout_failed">Nu se poate deconecta</string>
     <string name="mi_account_identity_title">Verificaţi identitatea dvs.</string>
@@ -156,8 +155,6 @@
     <string name="micloud_space_info">Disponibil: %s</string>
     <string name="mili_center">Credite Mi</string>
     <string name="mipay_center">Portofel Mi</string>
-    <string name="miui_provision_find_status_text">"Acest telefon este asociat unui cont Mi existent (%1$s); introduceți parola pentru a verifica dispozitivul.
-(Codul de deblocare: %2$s)"</string>
     <string name="multi_user_not_show_sync_activity_message_1">"Se pare că utilizați contul Mi din spațiul principal."</string>
     <string name="multi_user_not_show_sync_activity_message_2">"În acest caz, toate datele vor fi sincronizate cu cele din spațiul secundar. Pentru a evita acest lucru, nu activați sincronizarea cu Mi Cloud"</string>
     <string name="multi_user_not_show_sync_activity_title">"Nu activați sincronizarea cu Mi Cloud"</string>
@@ -364,8 +361,12 @@ Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="trusted_browsers_prompt">Acest browser nu va mai fi considerat de încredere dacă veți șterge cookie-urile.</string>
     <string name="turn_off_find_device_failed_title">"Nu se poate dezactiva Localizarea dispozitivului"</string>
     <string name="turning_off_find_device">Dezactivare Localizare dispozitiv…</string>
-    <string name="unbind_sns_description">După ce eliminați acest cont, nu veți putea utiliza %s pentru a vă accesa contul dvs. Mi.</string>
-    <string name="update_contacts">Actualizaţi agenda</string>
+    <string name="unbind_sns_description">"După ce vă veți deconecta de la acest cont, nu veți putea utiliza %s pentru a vă accesa contul dvs. Mi."</string>
+    <string name="unlock_help_notice">"Ajutor:
+· Dacă v-ați uitat parola, accesați id.mi.com pentru a o reseta.
+· Dacă nu vă puteți debloca telefonul, accesați i.mi.com pentru a dezactiva Localizarea telefonului
+· Furnizați acest cod Serviciului Clienți: %s"</string>
+    <string name="update_contacts">Actualizaţi contactele</string>
     <string name="update_email_address_dialog_message">Trebuie să vă verificați identitatea înainte de a actualiza e-mailul.</string>
     <string name="update_email_address_dialog_title">Actualizare adresă de e-mail</string>
     <string name="update_phone_number_notice_message">Trebuie să vă verificăm identitatea înainte de a actualiza numărul de telefon.</string>
